--- a/projeto/index.html
+++ b/projeto/index.html
@@ -17,28 +17,34 @@
 			<!-- Font Awesome -->
 			<script src="https://kit.fontawesome.com/fcba8eb07f.js" crossorigin="anonymous"></script>
 
-       	</head>
+			<!-- JavaScript -->
+			<script src="script.js" defer></script>
+
+       	</head> 
 		
 		<body>
-			<div id="calculadora">
-				<div id="display">
-					<input type="text" name="tela" id="tela" disabled="disabled">
-				</div>
-				
-				<div id="linha1">
-					<button>C</button> <button>&lt;</button> <button>/</button> <button>x</button>
-				</div>
-				<div id="linha2">
-					<button>7</button> <button>8</button> <button>9</button> <button>-</button>
-				</div>
-				<div id="linha3">
-					<button>4</button> <button>5</button> <button>6</button> <button>+</button>
-				</div>
-				<div id="linha4">
-					<button>1</button> <button>2</button> <button>3</button> <button>.</button>
-				</div>
-				<div id="linha5">
-					<button>0</button> <button>=</button>
+			<div id="caixa">
+				<div id="calculadora">
+					<h1>CALCULADORA</h1>
+					<div id="display">
+						<input type="text" name="tela" id="tela" disabled="disabled">
+					</div>
+					
+					<div id="linha1">
+						<button onclick="">C</button> <button onclick="">&lt;</button> <button onclick="">/</button> <button onclick="">x</button>
+					</div>
+					<div id="linha2">
+						<button onclick="">7</button> <button onclick="">8</button> <button onclick="">9</button> <button onclick="">-</button>
+					</div>
+					<div id="linha3">
+						<button onclick="">4</button> <button onclick="">5</button> <button onclick="">6</button> <button onclick="">+</button>
+					</div>
+					<div id="linha4">
+						<button onclick="">1</button> <button onclick="">2</button> <button onclick="">3</button> <button onclick="">.</button>
+					</div>
+					<div id="linha5">
+						<button onclick="">0</button> <button onclick="">=</button>
+					</div>
 				</div>
 			</div>
 		</body>
