--- a/projeto/index.html
+++ b/projeto/index.html
@@ -34,13 +34,13 @@
 						<button onclick="">C</button> <button onclick="">&lt;</button> <button onclick="">/</button> <button onclick="">x</button>
 					</div>
 					<div id="linha2">
-						<button onclick="">7</button> <button onclick="">8</button> <button onclick="">9</button> <button onclick="">-</button>
+						<button onclick="inserir(7)">7</button> <button onclick="inserir(8)">8</button> <button onclick="inserir(9)">9</button> <button onclick="">-</button>
 					</div>
 					<div id="linha3">
-						<button onclick="">4</button> <button onclick="">5</button> <button onclick="">6</button> <button onclick="">+</button>
+						<button onclick="inserir(4)">4</button> <button onclick="inserir(5)">5</button> <button onclick="inserir(6)">6</button> <button onclick="">+</button>
 					</div>
 					<div id="linha4">
-						<button onclick="">1</button> <button onclick="">2</button> <button onclick="">3</button> <button onclick="">.</button>
+						<button onclick="inserir(1)">1</button> <button onclick="inserir(2)">2</button> <button onclick="inserir(3)">3</button> <button onclick="">.</button>
 					</div>
 					<div id="linha5">
 						<button onclick="">0</button> <button onclick="">=</button>
