--- a/projeto/index.html
+++ b/projeto/index.html
@@ -27,23 +27,23 @@
 				<div id="calculadora">
 					<h1>CALCULADORA</h1>
 					<div id="display">
-						<input type="text" name="tela" id="tela" disabled="disabled">
+						<p id="tela"></p>
 					</div>
 					
 					<div id="linha1">
-						<button onclick="">C</button> <button onclick="">&lt;</button> <button onclick="">/</button> <button onclick="">x</button>
+						<button class="notnum" onclick="limparTudo()">C</button> <button class="notnum" onclick="limparUm()">&lt;</button> <button class="notnum" onclick="inserir('/')">/</button> <button class="notnum" onclick="inserir('*')">x</button>
 					</div>
 					<div id="linha2">
-						<button onclick="inserir(7)">7</button> <button onclick="inserir(8)">8</button> <button onclick="inserir(9)">9</button> <button onclick="">-</button>
+						<button onclick="inserir('7')">7</button> <button onclick="inserir('8')">8</button> <button onclick="inserir('9')">9</button> <button class="notnum" onclick="inserir('-')">-</button>
 					</div>
 					<div id="linha3">
-						<button onclick="inserir(4)">4</button> <button onclick="inserir(5)">5</button> <button onclick="inserir(6)">6</button> <button onclick="">+</button>
+						<button onclick="inserir('4')">4</button> <button onclick="inserir('5')">5</button> <button onclick="inserir('6')">6</button> <button class="notnum" onclick="inserir('+')">+</button>
 					</div>
 					<div id="linha4">
-						<button onclick="inserir(1)">1</button> <button onclick="inserir(2)">2</button> <button onclick="inserir(3)">3</button> <button onclick="">.</button>
+						<button onclick="inserir('1')">1</button> <button onclick="inserir('2')">2</button> <button onclick="inserir('3')">3</button> <button class="notnum" onclick="inserir('.')">.</button>
 					</div>
 					<div id="linha5">
-						<button onclick="">0</button> <button onclick="">=</button>
+						<button onclick="inserir('0')">0</button> <button class="notnum" onclick="calcular()">=</button>
 					</div>
 				</div>
 			</div>
